Add AgentProcessAware interface and tick-based memory distillation (#343)
* Add AgentProcessAware interface, MemoryDistillation state, and distillation events

- Create AgentProcessAware interface in api module with getAgentProcessId()
- Make AssignedTask implement AgentProcessAware
- Create MemoryDistillation state record implementing AgentProcessAware
- Create MemoryDistillationAwareState interface for state tracking
- Create MemoryDistillationStartedEvent and MemoryDistillationFinishedEvent
- Register new events in AgenticAggregateRuntime, controller, and factory
- Add event-sourcing handlers for new events in handleBuiltInEvent
- Refactor tick logic to operate on AgentProcessAware (both tasks and distillations)
- Update hasActiveAgentTasks to check for active memory distillations

Agent-Logs-Url: https://github.com/elasticsoftwarefoundation/akces-framework/sessions/5ee7912a-d8f4-478c-9f51-34e90b3da936

Co-authored-by: jwijgerd <914840+jwijgerd@users.noreply.github.com>

* Update MemoryDistillationTest for tick-based distillation processing

- Update test state record to implement MemoryDistillationAwareState
- Refactor tests to verify two-phase distillation (started event + tick)
- Add new tests for distillation tick path (limit enforcement, revocation)
- Verify distiller process is NOT run to completion (tick-based now)

Agent-Logs-Url: https://github.com/elasticsoftwarefoundation/akces-framework/sessions/5ee7912a-d8f4-478c-9f51-34e90b3da936

Co-authored-by: jwijgerd <914840+jwijgerd@users.noreply.github.com>

* Address review feedback: integrate MemoryDistillationAwareState into MemoryAwareState, support multiple distillations, add distillationInput to MemoryDistillation, fix javadoc

- Remove MemoryDistillationAwareState interface; merge methods into MemoryAwareState
- Change from single MemoryDistillation to List<MemoryDistillation> (multiple active)
- Add distillationInput (Object) field to MemoryDistillation record for crash recovery
- Fix javadoc errors: 